# writing-logs-cli

./: .gitignore  pyproject.toml  structure.md
src/wlogs/: batch_post.py  config.py  main.py  master-writing-log
src/wlogs/commands/: count.py  scene.py  session.py
src/wlogs/utils/: api.py  data_lib.py  file_lib.py
wlogs/: api.py  batch_post.py  cli.py  config.py
