[project]
name = "writing-logs-cli"
version = "0.1.0"
description = "CLI client for Writing Logs API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml"
  
]

[project.scripts]
wlogs = "wlogs.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
